fix: fix overflowing about

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ nav img {
 }
 
 .about-content dt {
-  width: 10rem;
+  width: 5rem;
   position: relative;
 }
 
@@ -87,7 +87,7 @@ nav img {
 }
 
 .about-content dd {
-  width: calc(100% - 10rem);
+  width: calc(100% - 5rem);
   text-align: center;
 }
 
